manifests/react-flight-tracker/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: react-flight-tracker
  labels:
    toolkit.fluxcd.io/tenant: dev-team
