manifests/react-flight-tracker/base/react-flight-tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\appad\Kompose\kompose.exe convert --out manifests/react-flight-tracker/base/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: react-flight-tracker
  name: react-flight-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: react-flight-tracker
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\appad\Kompose\kompose.exe convert --out manifests/react-flight-tracker/base/
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: react-flight-tracker
    spec:
      containers:
        - image: ghcr.io/apoorva64/react-flight-tracker
          name: react-flight-tracker
          ports:
            - containerPort: 8080
          resources: { }
      restartPolicy: Always
status: { }
