manifests/react-flight-tracker/base/react-flight-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\appad\Kompose\kompose.exe convert --out manifests/react-flight-tracker/base/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: react-flight-tracker
  name: react-flight-tracker
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: react-flight-tracker
status:
  loadBalancer: {}
